# elementary-vm

./: .clang-format  .gitignore  CMakeLists.txt  README.md  main.cpp
apps/: CMakeLists.txt  main.cpp
lib/controller/: CMakeLists.txt
lib/controller/include/: controller.hpp
lib/controller/src/: controller.cpp
lib/operands/: CMakeLists.txt
lib/operands/include/: creator.hpp  float32.hpp  float64.hpp  ifloat.hpp  iinteger.hpp  int16.hpp  int32.hpp  int64.hpp  int8.hpp  ioperand.hpp  iparser.hpp  operand_creator.hpp  operand_parser.hpp  operand_wrapper.hpp
lib/operands/src/: creator.cpp  float32.cpp  float64.cpp  int16.cpp  int32.cpp  int64.cpp  int8.cpp  operand_creator.cpp  operand_parser.cpp
lib/parser/: CMakeLists.txt
lib/parser/include/: arg_parser.hpp  cli_commands.hpp  cli_parser.hpp  command.hpp  command_parser.hpp  instruction_commands.hpp  instruction_parser.hpp  instruction_tokenizer.hpp  parser.hpp
lib/parser/include/cli/: commands.hpp  icommand.hpp  iparser.hpp  parser.hpp
lib/parser/include/instruction/: commands.hpp  creator.hpp  icommand.hpp  icomplex.hpp  iparser.hpp  itokenizer.hpp  itrivial.hpp  parser.hpp  tokenizer.hpp
lib/parser/src/: arg_parser.cpp  cli_commands.cpp  cli_parser.cpp  command_parser.cpp  instruction_commands.cpp  instruction_parser.cpp  instruction_tokenizer.cpp  parser.cpp
lib/parser/src/cli/: commands.cpp  parser.cpp
lib/parser/src/instruction/: commands.cpp  creator.cpp  parser.cpp  tokenizer.cpp
lib/reader/: CMakeLists.txt
lib/reader/include/: console_reader.hpp  file_reader.hpp  ireader.hpp  reader.hpp
lib/reader/src/: console_reader.cpp  file_reader.cpp  reader.cpp
